; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_jsonb_gin.c_extract_jsp_path_expr.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_jsonb_gin.c_extract_jsp_path_expr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JSP_GIN_AND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32, i32*, i32*)* @extract_jsp_path_expr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @extract_jsp_path_expr(i32* %0, i32 %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i32*, i32** %8, align 8
  %14 = load i32*, i32** %9, align 8
  %15 = call i32* @extract_jsp_path_expr_nodes(i32* %11, i32 %12, i32* %13, i32* %14)
  store i32* %15, i32** %10, align 8
  %16 = load i32*, i32** %10, align 8
  %17 = call i32 @list_length(i32* %16)
  %18 = icmp sle i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %4
  store i32* null, i32** %5, align 8
  br label %31

20:                                               ; preds = %4
  %21 = load i32*, i32** %10, align 8
  %22 = call i32 @list_length(i32* %21)
  %23 = icmp eq i32 %22, 1
  br i1 %23, label %24, label %27

24:                                               ; preds = %20
  %25 = load i32*, i32** %10, align 8
  %26 = call i32* @linitial(i32* %25)
  store i32* %26, i32** %5, align 8
  br label %31

27:                                               ; preds = %20
  %28 = load i32, i32* @JSP_GIN_AND, align 4
  %29 = load i32*, i32** %10, align 8
  %30 = call i32* @make_jsp_expr_node_args(i32 %28, i32* %29)
  store i32* %30, i32** %5, align 8
  br label %31

31:                                               ; preds = %27, %24, %19
  %32 = load i32*, i32** %5, align 8
  ret i32* %32
}

declare dso_local i32* @extract_jsp_path_expr_nodes(i32*, i32, i32*, i32*) #1

declare dso_local i32 @list_length(i32*) #1

declare dso_local i32* @linitial(i32*) #1

declare dso_local i32* @make_jsp_expr_node_args(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
